Unified Rubocop cleanups under single file.
Consolidate all the .rubocop.yml into a single file, finished out cleanups for
all the Ruby files.

Change-Id: I92d5983724d5d0185cd25bea6a0f46657a6c05d4
Addresses: blueprint rubocop-for-block-storage

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,7 +1,15 @@
-# UTF-8 headers not generally in these files
-Encoding:
-  Enabled: false
+AllCops:
+  Includes:
+    - metadata.rb
+    - Gemfile
+    - attributes/**
+    - recipes/**
+    - spec/**
 
 # ignore long lines
 LineLength:
   Enabled: false
+
+# Allow small arrays before forcing  %w or %W
+WordArray:
+  MinSize: 3
