Upgrade/Update rubocop
Now that almost all of the rubocop blueprints have been completed, make
one final pass through all of the cookbooks ensuring they're all in
sync with each other.

- Upgrade rubocop to 0.18.1
- Fix violations caused by 0.18.1 upgrade
- Add Includes for non-existent folders to Includes so they
  automatically cover future additions

Change-Id: I9224b785f50103d348e3b16ea24e5dc8cab84c62
Implements: blueprint lint-and-unit-testing-for-havana

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,13 +3,19 @@ AllCops:
     - metadata.rb
     - Gemfile
     - attributes/**
+    - libraries/**
+    - providers/**
     - recipes/**
+    - resources/**
     - spec/**
 
-# ignore long lines
+Encoding:
+  Exclude:
+    - metadata.rb
+    - Gemfile
+
 LineLength:
   Enabled: false
 
-# Allow small arrays before forcing  %w or %W
 WordArray:
   MinSize: 3
