Initial kilo updates
Change-Id: Idf43a4af9c5a2d666fd3938a63fb8e7f5c74a5be
Partial-Bug: #1426424

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 .bundle/
 berks-cookbooks/
-.kitchen/
-.vagrant/
+.kitchen
+.vagrant
 .coverage/
 *.swp
 Berksfile.lock
-Gemfile.lock
 Vagrantfile
+Gemfile.lock
