--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,7 @@
+inherit_from: .rubocop_todo.yml
+
 AllCops:
-  Includes:
+  Include:
     - metadata.rb
     - Gemfile
     - attributes/**
@@ -8,12 +10,15 @@ AllCops:
     - recipes/**
     - resources/**
     - spec/**
+  Exclude:
+    - .cookbooks/**/*
+    - berks-cookbooks/**/*
+    - .bundle/**/*
 
 Encoding:
   Exclude:
     - metadata.rb
     - Gemfile
-    - berks-cookbooks/**
 
 NumericLiterals:
   Enabled: false
